[tool.poetry]
name = "litestar-mqtt"
version = "0.1.0"
description = ""
authors = ["Alessandro Ferrini <im@alessandroferrini.com>"]
readme = "README.md"
packages = [{include = "litestar_mqtt"}]

[tool.poetry.dependencies]
python = "^3.8"
litestar = "^2.0.0a5"
gmqtt = "^0.6.12"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.263"
mypy = "^1.2.0"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
