[tool.poetry]
name = "litestar-mqtt"
version = "0.1.0"
description = ""
authors = ["Alessandro Ferrini <im@alessandroferrini.com>"]
readme = "README.md"
packages = [{ include = "litestar_mqtt" }]

[tool.poetry.dependencies]
python = "^3.8"
litestar = "2.*"
gmqtt = "^0.6.12"
pydantic = "2.*"
pydantic-settings = "2.*"


[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
isort = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
